styles/_sass/_components.scss
.logo {
    height: 6vh;
    width: 6vh;
    position: fixed;
    top: 0;
    left: 0;
    padding: 1em;
    z-index: 10;
    background-color: transparent;
    border: none;
    filter: invert(0);
    transition: all 0.3s ease;
}



// Navigation Styling for Desktop

@media screen and (min-width: 768px) {
    .nav-links {
        height: 6vh;
        display: flex;
        flex-direction: row;
        list-style: none;
        position: fixed;
        top: 0;
        right: 0;
        padding: 1em;
        transition: all 0.3s ease;
        filter: invert(0);

        a {
            margin: 0 0.5em;
            text-transform: uppercase;
            font-size: 0.7rem;
        }
    }

    .burger {
        display: none;
    }

    .nav-bottom {
        position: fixed;
        bottom: 0;
        width: 100%;
        display: flex;
        justify-content: space-between;
        padding: 1em;
        align-items: center;
    }
    

    .mail {
        display: flex;
        flex-direction: row;
        align-items: center;
        svg {
            margin-right: 1em;
        }

        .mail-id {
            font-size: 0.7rem;
            margin: 0;
            padding: 0;
        }
    }
    
    .social-links {
        display: flex;
        list-style: none;
        align-items: center;
        justify-content: space-around;
        li {
            margin: 0 0.25em;
            padding: 0 0.25em;
            border-radius: 10rem;
        }
    }

} // Desktop-only styling ends


// Navigation Styling for Mobile

@media screen and (max-width: 767px) {

    .burger {
        position: fixed;
        top: 0;
        right: 0;
        height: 6vh;
        width: 6vh;
        cursor: pointer;
        pointer-events: all;
        z-index: 10;
        padding: 15px 15px;
        display: inline-block;
        border: 0;
        background-color: transparent;
        transition: all 0.3s ease;
        filter: invert(0);
    }

    .burger-box {
        width: 30px;
        height: 24px;
        display: inline-block;
        position: relative;
        background-color: transparent;
    }

    .burger-inner {
        display: block;
        top: 50%;
        margin-top: -2px;
    }

    .burger-inner,
    .burger-inner::before,
    .burger-inner::after {
        width: 30px;
        height: 2px;  // width of burger bars
        background-color: #000;
        border-radius: 4px;
        position: absolute;
        transition-property: transform;
        transition-duration: 0.15s;
        transition-timing-function: ease;
    }

    .burger-inner::before,
    .burger-inner::after {
        content: "";
        display: block;
    }

    .burger-inner::before {
        top: -10px;
    }

    .burger-inner::after {
        bottom: -10px;
    }

    .nav-links {
        display: flex;
        flex-direction: column;
        list-style: none;
        width: 100%;
        height: 60vh;
    
        a {
            text-transform: uppercase;
            font-size: 2em;
            margin-bottom: 0.5em;
            text-align: center;
            opacity: 0;
            transform:translateX(20px);
        }

        a:nth-child(1) {
            transition: all 0.2s ease 0.3s;
        }
        a:nth-child(2) {
            transition: all 0.2s ease 0.4s;
        }
        a:nth-child(3) {
            transition: all 0.2s ease 0.5s;
        }
      
        
    }

    .main-nav {
        display: flex;
        flex-direction: column;
        position: fixed;
        width: 100%;
        height: 100vh;
        justify-content: space-evenly;
        background-color: rgba(255, 255, 255, 0.9);
        // 14 left, 23 right. x >,y v.
        // clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
        // -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
        opacity: 0;
        transition: all 0.3s cubic-bezier(.81,0,.31,.99);
        pointer-events: none;
        z-index: 8;
        padding-top: 20vh;
        padding-bottom: 20vh;
    }

    .main-nav.open {
        // clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
        // -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
        opacity: 1;
        pointer-events: all;

            .nav-links {
                a {
                    opacity: 1;
                    transform: translateX(0px);
                }
            }

            .nav-bottom {
                opacity: 1;
            }
        }


    

    .nav-bottom {
        display: flex;
        flex-direction: column-reverse;
        height: 30vh;
        width: 100%;
        align-items: center;
        opacity: 0;
        transition: all 0.5s ease 0.8s;

        .mail {
            svg {
                display: none;
            }
            .mail-id {
                font-size: 0.8em;
            }
        }
    }

    .social-links {
        display: flex;
        list-style: none;
        align-items: center;
        justify-content: space-around;
        margin-bottom: 1em;
    
        li {
            margin: 0 0.8em;

            svg {
                height: 20px;
                width: 20px;
            }
        }
    }
    

} // Mobile-only styling ends


.light {
    filter: invert(1);
}

